# fun

./: LICENSE  README.md  example.fun  expr.go  fun  go.mod  go.sum  lib.fun  main.go  package-lock.json  program.go  type.go  types.go  value.go
docs/: examples.md  ide-support.md  index.md  internals.md  language-guide.md  modules.md  repl.md  stdlib.md  type-system.md
examples/basic/: lib.fun  main.fun
internal/: env.go  expr.go  lsp.go  program.go  type.go  value.go
tree-sitter-fun/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-fun/bindings/c/: tree-sitter-fun.pc.in
tree-sitter-fun/bindings/go/: binding.go  binding_test.go
tree-sitter-fun/bindings/node/: binding.cc  index.js
tree-sitter-fun/bindings/python/tests/: test_binding.py
tree-sitter-fun/bindings/python/tree_sitter_fun/: __init__.py  binding.c
tree-sitter-fun/bindings/rust/: build.rs  lib.rs
tree-sitter-fun/bindings/swift/TreeSitterFun/: fun.h
tree-sitter-fun/bindings/swift/TreeSitterFunTests/: TreeSitterFunTests.swift
tree-sitter-fun/src/: grammar.json  node-types.json  parser.c
tree-sitter-fun/test/corpus/: basic_constructs  hello  medium_examples  type_annotations
vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  test.fun
vscode/client/src/: extension.ts
vscode/src/: extension.ts
vscode/syntaxes/: fun.tmLanguage.json
