[package]
name = "tree-sitter-fun"
description = "A purely fun-ctional language with amazing performance"
version = "0.1.0"
authors = ["Matan Tsuberi <tsuberim@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fun"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tsuberim/fun"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
